@@ -1,3 +1,8 @@
+2012-06-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-msg.el (gnus-msg-mail): Warn the user about Gnus not running
+	(bug#11514).
+
 2012-06-07  Stephen Eglen  <S.J.Eglen@damtp.cam.ac.uk>
 
 	* message.el (message-buffers): Return all buffers derived from Message
